--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,387 @@
-.App {
+input{
+  font-size: 0.9rem;
+  padding: 0.4rem 0.8rem;
+  border: none;
+  outline:none;
+  margin: 0rem;
+}
+
+.dashboard{
+  display: flex;
+  flex-direction: row;
+}
+.componet_bar{
+  width: 15vw;
+  height: 90vh;
+  background-color:#354147;
+  /* background-color: rgb(236, 236, 236); */
+  position: fixed;
+  left: 0;
+  /* right: 0; */
+  box-shadow: 0 0.8rem 1rem 0 rgba(37, 37, 37,0.4);
+}
+.setting_bar{
+  width: 15vw;
+  height: 90vh;
+  background-color:#354147;
+  position: fixed;
+  right: 0;
+  box-shadow: 0 0.8rem 1rem 0 rgba(37, 37, 37,0.4);
+}
+.componet_bar_header{
+  background: white;
+  padding: 0.5rem 1rem;
+  border-radius: 0 0 0.5rem 0.5rem;
+  transform: translate(0.5rem,-0.3rem);
+  text-align: left;
+}
+.setting_bar_header{
+  background: white;
+  padding: 0.5rem 1rem;
+  border-radius: 0 0 0.5rem 0.5rem;
+  transform: translate(-0.5rem,-0.3rem);
+  text-align: right;
+}
+.heading{
+  font-size: 1rem;
+  margin: 0;
+  color: #354147;
+  text-transform:uppercase;
+  letter-spacing: 0.1rem;
+}
+.componet_bar_scroll_section{
+  width: 90%;
+  height: 70%;
+  overflow-y: scroll;
+  margin: 0.6rem auto;
+  padding: 0.5rem;
+}
+.component_icon{
+  text-transform: uppercase;
+  cursor: grab;
+  width: 95%;
+  height: 1.5rem;
+  padding: 0.8rem 0;
+  margin: 2rem auto;
   text-align: center;
-}
+  border-radius: 0.2rem;
+  background-color: white;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.3);
+  /* color: rgb(161, 161, 161); */
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 0.6rem;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2rem);
+  -webkit-backdrop-filter: blur(2rem);
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  box-shadow: 0 5rem 6rem 0 rgba(99, 99, 99, 0.37);
+  transition: transform 0.5s;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.component_icon:hover{
+  transform: scale(1.1);
+}
+.mainscreen{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  position: absolute;
+  top: 52%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.uidropscreen{
+  width: 60vw;
+  height: 70vh;
+  background-color: rgb(236, 236, 236);
+  margin: 3rem auto auto;
+  position: relative;
+}
+.delete{
+width: 65vw;
+height: 5rem;
+border-radius: 5rem 5rem 0 0;
+position: relative;
+bottom: 0;
+transform: translate(0,1rem);
+background-color: rgb(160, 160, 160);
+background-color: rgb(236, 236, 236);
+display: flex;
+justify-content: center;
+align-items: center;
+color: rgb(173, 173, 173);
+}
+.deleted{
+  cursor: crosshair;
+  color: rgb(63, 63, 63);
+  background:linear-gradient(180deg,rgb(255, 223, 229), rgb(197, 197, 197));
+}
+.bin_icon{
+
+font-size: 3rem;
+}
+.uidropscreen_scroll_section{
+  width: 95%;
+  height: 95%;
+  overflow-y: scroll;
+  margin: auto;
+  padding: 0.5rem;
+  /* background-color: rgb(236, 236, 236); */
+  background-color:#384146;
+  box-shadow: 0 0.8rem 1rem 0 rgba(37, 37, 37,0.4);
+}
+.drop_screen {
+  position: relative;
+  color: #505457;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background-color:#384146;
+  opacity: 0.8;
+}
+.drop_screen::before {
+  content: 'DROP HERE';
+  font-weight: 700;
+  color: #1f1f1f;
+  z-index: 2;
+  font-size: 3rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.popup_background{
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  backdrop-filter: blur(2rem);
+  -webkit-backdrop-filter: blur(2rem);
+  border: 0.1rem solid rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.popup{
+  /* width: 100vw;
+  height: 100vh;
+  position: fixed; */
+  /* top: 50%;
+  left: 50%; */
+  /* transform: translate(-50%,-50%); */
+  background-color: rgba(255, 255, 255, 0.6);
+  opacity: 1;
+  padding: 1.4rem;
+  border-radius: 0.2rem;
+  backdrop-filter: blur(2rem);
+  -webkit-backdrop-filter: blur(2rem);
+  border: 0.1rem solid rgb(255, 255, 255);
+  box-shadow: 0 0.8rem 1rem 0 rgba(37, 37, 37,0.4);
+}
+.popup_button{
+  display: flex;
+  justify-content: flex-end;
+}
+.popup_button button{
+cursor: pointer;
+font-size: 0.8rem;
+font-weight: 600;
+padding: 0.6rem 1rem;
+margin: 0.5rem 0.2rem;
+box-shadow: 0 0.8rem 1rem 0 rgba(37, 37, 37,0.4);
+transition: all 0.8s;
+border: 0.1rem solid transparent;
+}
+.popup_button button:hover{
+box-shadow: none;
+}
+.danger_btn{
+  color: #fff;
+  background: crimson;
+}
+.box{
+  /* height: 3rem; */
+  /* backdrop-filter: blur(2rem); */
+  /* -webkit-backdrop-filter: blur(2rem); */
+  background-color: rgba(255, 255, 255, 0.1); 
+   border: 0.1rem solid rgba(255, 255, 255, 0.2);
+   border-radius: 0.3rem;
+  /* width: 8rem; */
+  margin: 2rem 4rem;
+  padding: 1rem 2rem;
+  transition: 0.6s;
+  text-align: center;
+}
+.box:hover{
+  background-color: rgba(255, 255, 255, 0.3); 
+  transform: scale(1.02);
 }
 
-.App-link {
-  color: #61dafb;
+.header{
+  background-color: #ffffff;
+  box-shadow: 0 5px 5px rgb(230, 230, 230);
+  color:#354147;
+  height:10vh;
+}
+.headercontent{
+  margin:auto;
+  display:flex;
+  justify-content:space-between;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.headercontent h3{
+  margin: 0;
+  padding: 0;
+}
+.headercontent h3 span{
+  color: #14a1ff;
+  font-size: 1.6rem;
+  font-weight: 900;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.setting_form{
+  height: 70%;
+  overflow-y: scroll;
+  margin: 1rem auto;
+  padding: 0rem 1.2rem;
+}
+.setting_bar .save_btn{
+  margin: 1rem 0.5rem;
+  background: rgba(255, 255, 255, 1);
+  font-weight: 700;
+  width: max-content;
+  padding: 0.2rem 0.6rem;
+  border: 0.2rem solid transparent;
+  
+  transition: 0.8s;
+  cursor: pointer;
+  border-radius: 0.4rem;
+}
+.setting_bar .save_btn:hover{
+  box-shadow: none;
+  background: white;
+  border: 0.15rem solid #14a1ff;
+}
+.setting_field{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1.7rem 0.5rem;
+  border: 0.15rem solid rgb(255, 255, 255);
+  color: #c7c7c7;
+  font-weight: 600;
+  font-size: 0.8rem;
+  padding-left: 0.4rem;
+  position: relative;
+}
+.setting_form input{
+    width: 3rem;
+    height:1.4rem;
+    font-size: 2rem;
+    outline: none;
+    background-color: #ffffff;
+    color: black;
+    text-align: left;
+    border: none;
+    font-size: 1rem;
+    font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inner_select{
+  position: absolute;
+  top: 0%;
+  right: -10%;
+  transform: translate(-20%,-75%);
+  width: 3rem;
+  height:1.5rem;
+  outline: none;
+  /* background-color: #ffffff; */
+  color: black;
+  /* overflow: hidden; */
+  font-size: 0.8rem;
+  text-align: center;
+  border: none;
+  padding: 0;
+  font-weight: 100;
+  background: #fff;
+  box-shadow: 0 0.2rem 0.4rem 0 rgba(37, 37, 37,0.2);
+}
+.inner_select select{
+  outline: none;
+width: 3rem;
+height: 1.5rem;
+font-weight: 100;
+border: none;
+-webkit-appearance: none;
+appearance:none;
+-moz-appearance:none;
+/* border: 0.1rem solid #888888; */
+font-size: 1rem;
+box-shadow: 0 0.8rem 1rem 0 rgba(37, 37, 37,0.4);
+}
+.outer_select option{
+  width: 3rem;
+  height:4rem;
+  background: red;
+  outline: none;
+  background-color: #ffffff;
+  color: black;
+  text-align: center;
+  border: none;
+  font-weight:100;
+  font-size: 0.4rem;
+}
+.outer_select select{
+  width: 4.5rem;
+  height:2rem;
+  outline: none;
+  background-color: #ffffff;
+  color: black;
+  text-align: center;
+  border: none;
+  font-weight: 100;
+  font-size: 0.8rem;
+  position: relative;
+  -webkit-appearance: none;
+   appearance:none;
+   -moz-appearance:none;
+}
+.preview_btn{
+  background: #fff;
+  width: max-content;
+  padding: 0.4rem 0.8rem;
+  font-weight: 700;
+  margin: 1rem auto;
+  border-radius: 0.2rem;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+}
+.tab{
+  display: flex;
+  justify-content: center;
+  padding: 0.8rem auto;
+}
+.tab div{
+  background: rgb(208, 208, 208);
+  padding: 0.4rem 0.8rem;
+  border: 0.1rem solid rgb(174, 174, 174);
+  cursor: pointer;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+.preview_screen_container{
+  /* padding: 2rem 1.5rem; */
 }
